<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.rdgdevlopment.gutierrezroberto_ce01.GutierrezRoberto_CE01">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/myNumberTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_margin="16dp"
            android:autoSizeMinTextSize="80sp"
            android:autoSizeTextType="uniform"
            android:maxLength="4"
            android:textAlignment="textEnd"
            android:textSize="120sp"
            tools:layout_editor_absoluteY="32dp"/>

        <LinearLayout
            android:id="@+id/topRowNumbers"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            tools:layout_editor_absoluteX="0dp">

            <Button
                android:id="@+id/button1"
                style="@style/buttonStyle"
                android:text="@string/title1"/>

            <Button
                android:id="@+id/button2"
                style="@style/buttonStyle"
                android:text="@string/title2"/>

            <Button
                android:id="@+id/button3"
                style="@style/buttonStyle"
                android:text="@string/title3"/>

            <Button
                android:id="@+id/additionButton"
                style="@style/buttonStyle"
                android:text="@string/titlePlus"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondFromTopRow"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            tools:layout_editor_absoluteX="0dp">

            <Button
                android:id="@+id/button4"
                style="@style/buttonStyle"
                android:text="@string/title4"/>

            <Button
                android:id="@+id/button5"
                style="@style/buttonStyle"
                android:text="@string/title5"/>

            <Button
                android:id="@+id/button6"
                style="@style/buttonStyle"
                android:text="@string/title6"/>

            <Button
                android:id="@+id/subtractionButton"
                style="@style/buttonStyle"
                android:text="@string/minus"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondFromBottomRow"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            tools:layout_editor_absoluteX="0dp">

            <Button
                android:id="@+id/button7"
                style="@style/buttonStyle"
                android:text="@string/title7"/>

            <Button
                android:id="@+id/button8"
                style="@style/buttonStyle"
                android:text="@string/title8"/>

            <Button
                android:id="@+id/button9"
                style="@style/buttonStyle"
                android:text="@string/title9"/>

            <Button
                android:id="@+id/multiplication"
                style="@style/buttonStyle"
                android:layout_weight="1"
                android:text="@string/times"
                android:layout_width="0dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp">

            <Button
                android:id="@+id/clearButton"
                style="@style/buttonStyle"
                android:text="@string/clear"/>

            <Button
                android:id="@+id/button0"
                style="@style/buttonStyle"
                android:text="@string/title0"/>

            <Button
                android:id="@+id/equalsButton"
                style="@style/buttonStyle"
                android:text="@string/titleEquals"/>

            <Button
                android:id="@+id/division"
                style="@style/buttonStyle"
                android:text="@string/divide"/>
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
